make the vote li's have links inside them to get cursor. fix z-index issues in dragging candidates.

--- a/app/assets/stylesheets/pages/election.css.sass
+++ b/app/assets/stylesheets/pages/election.css.sass
@@ -94,7 +94,7 @@ $thin-column: 19%
   width: 100%
   height: 100%
   position: absolute
-  z-index: 100
+  z-index: 1
   background-color: white
   right: 100%
   @include transition('right', 150ms, 'ease-in')
